# abb-code-kata-26

./: GildedRoseRequirements.md
.devcontainer/: devcontainer.json
cpp/: CMakeLists.txt
cpp/src/: GildedRose.cc  GildedRose.h
cpp/test/: CMakeLists.txt
cpp/test/cpp_googletest_approvaltest/: GildedRoseGoogletestApprovalTests.GildedRoseApprovalTests.VerifyCombinations.approved.txt  GildedRoseGoogletestApprovalTests.GildedRoseApprovalTests.VerifyCombinationsIterative.approved.txt  GildedRoseGoogletestApprovalTests.cc
cpp/test/cpp_googletest_unittest/: GildedRoseGoogletestUnitTests.cc
